# django-epfl-web2018

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  tox.ini
.github/workflows/: release.yml  test.yml
django_epfl_web2018/: views.py
django_epfl_web2018/locale/de/LC_MESSAGES/: django.mo  django.po
django_epfl_web2018/locale/en/LC_MESSAGES/: django.mo  django.po
django_epfl_web2018/locale/fr/LC_MESSAGES/: django.mo  django.po
django_epfl_web2018/locale/it/LC_MESSAGES/: django.mo  django.po
django_epfl_web2018/templates/web2018/: messages.html  web2018.html
django_epfl_web2018/templates/web2018/includes/: 400-de.html  400-en.html  400-fr.html  403-de.html  403-en.html  403-fr.html  404-de.html  404-en.html  404-fr.html  500-de.html  500-en.html  500-fr.html  503-de.html  503-en.html  503-fr.html  footer-light-de.html  footer-light-en.html  footer-light-fr.html  footer-scripts.html  head.html  logo.html
django_epfl_web2018/templatetags/: web2018.py
requirements/: requirements-dev.txt  requirements-lint.txt  requirements-tools.txt
tests/: manage.py  settings.py  test_messages.py  test_templates.py  test_views.py  urls.py
tests/app/: views.py
tests/app/templates/: base.html
